# templana

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
templana/: __init__.py  template.py
tests/: test_template.py
