[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "templana"
dynamic = ["version"]
description = "A simple prompt templating library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "typing-extensions>=4.13.2",
]
[dependency-groups]
lint = [
    "basedpyright>=1.29.0",
    "ruff>=0.11.6",
]
test = [
    "pytest>=8.3.5",
]
